# threshold-cutter

./: .gitignore  AGENTS.md  PROJECT_SPEC.md  README.md  main.py  pyproject.toml  repomix-output.xml
app/: __init__.py  main.py
app/assets/: styles.css
app/utils/: activations.py  data_io.py  exports.py  metrics.py  plots.py  thresholds.py
tests/: generate_synthetic_data.py  test_activations.py  test_data_io.py  test_exports.py  test_metrics.py  test_thresholds.py
tests/synthetic_data/: synthetic_validation_long.csv  synthetic_validation_wide.csv
